# frontend-test

./: .env.development  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/database/: comment.py  database.py
backend/app/endpoints/: health.py
backend/app/endpoints/images/: create_point.py  delete_point.py  get_image.py  get_image_mipmap.py  get_image_preview.py  list_images.py  list_points.py
data/images/: README.md
fetch/: main.py  requirements.txt
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.js  Map.js  Pin.js  api.js  imageCache.js  index.js  localCache.js
frontend/src/api/: api.js
frontend/src/hooks/: useCachedImage.js  usePersistedState.js
